--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   catalog_api:
     build: ./catalog_api
     container_name: catalog_api
+    restart: always
     ports:
       - 8080:8080
     volumes:
@@ -11,6 +12,7 @@ services:
     command: "sh entrypoint.sh"
     depends_on:
       - catalog_db
+      - order_api
       - rabbitmq
 
 
@@ -30,6 +32,7 @@ services:
   order_api:
     build: ./order_api
     container_name: order_api
+    restart: always
     ports:
       - 3000:3000
     volumes:
@@ -53,11 +56,13 @@ services:
   payment_api:
     build: ./payment_api
     container_name: payment_api
+    restart: always
     volumes:
       - ./payment_api:/app
     command: sh entrypoint.sh
     depends_on:
       - rabbitmq
+      - order_api
 
 
   store_client:
